--- a/src/scss/layout/_index.scss
+++ b/src/scss/layout/_index.scss
@@ -1,8 +1,8 @@
 @forward "header";
-@forward "home";
-@forward "aboutme";
-@forward "career";
-@forward "skills";
+@forward "about";
+@forward "skills-services";
 @forward "projects";
+@forward "career";
 @forward "contact";
 @forward "footer";
+@forward "project";
