--- a/src/scss/base/_darkmode.scss
+++ b/src/scss/base/_darkmode.scss
@@ -2,80 +2,117 @@
 @use "mixins" as m;
 
 .dark-mode {
-  background-color: v.$light-black;
-  .header,
-  .nav__menu,
-  .menu__hidden {
-    background-color: v.$light-black;
-  }
-  .title-text,
-  .title-career,
-  .nav__link,
-  .nav__logo-name,
-  .skills-subtitle,
-  .project__description-content,
-  .project__description-content ol,
-  .nav__toggle {
-    color: v.$beige;
-  }
+  background-color: #3f4251;
 
-  p {
-    color: v.$beige;
-
-    .slogan {
-      color: v.$white;
-      background: linear-gradient(
-        90deg,
-        v.$light-black 10%,
-        rgba(212, 135, 138, 0.6783088235294117) 61%
+  .header {
+    background-image: linear-gradient(
+        170deg,
+        rgba(49, 52, 68, 0.9493173978575805) 45%,
+        rgba(49, 52, 68, 0.9484770617231268) 45%
+      ),
+      image-set(
+        url("../img/portada.avif") 1x,
+        url("../img/portada.webp") 1x,
+        url("../img/portada.jpg") 1x
       );
+    background-repeat: no-repeat;
+    background-position: left, left, left;
+    background-size: cover, cover, cover;
+
+    &__title {
+      &--main {
+        color: v.$white;
+      }
+    }
+    &__description {
+      &--title {
+        color: v.$white;
+      }
+      &--text {
+        color: v.$white;
+      }
+      &--animation {
+        span {
+          &::after {
+            background-color: #3b3e4d;
+          }
+        }
+      }
+    }
+    &__project {
+      &--title {
+        color: v.$white;
+      }
     }
   }
-  h1.home__name {
-    color: v.$beige;
-  }
-  .ima {
-    color: v.$beige;
-  }
-
-  .home-animation span::after {
-    background-color: v.$light-black;
-
-    border-left: 5px solid v.$light-black;
-  }
-
-  .home__arrow,
-  .home__fire,
-  .contact__social-arrow {
-    filter: brightness(0) saturate(100%) invert(100%) sepia(0%) saturate(0%) hue-rotate(137deg)
-      brightness(103%) contrast(102%);
-  }
-
-  .contact__data,
-  .form {
-    background-color: v.$grey;
-    -webkit-box-shadow: 0px 34px 65px 19px rgba(138, 76, 76, 0.47);
-    -moz-box-shadow: 0px 34px 65px 19px rgba(138, 76, 76, 0.47);
-    box-shadow: 0px 34px 65px 19px rgba(138, 76, 76, 0.47);
-    border: none;
+  .nav {
+    &__logo {
+      &--lastname {
+        color: v.$white;
+      }
+    }
+    &__icon {
+      color: v.$white;
+    }
+    &__menu {
+      &--link,
+      &--link-darkmode {
+        @include m.desktop {
+          color: v.$white;
+          &::after {
+            background-color: v.$white;
+          }
+        }
+      }
+    }
   }
 
-  .about {
-    background-color: v.$dark-green;
+  .mouse-btn {
+    border: 3px solid v.$white;
+  }
+  .mouse-text {
+    color: v.$white;
+  }
+  .skills-services {
+    background-color: v.$violet;
+    &__title {
+      &--skills,
+      &--services {
+        color: v.$white;
+      }
+    }
+    &__skill {
+      &--container {
+        background-color: lighten(v.$dark-blue, 10%);
+      }
+    }
+  }
+  .career {
+    background-color: v.$violet;
+    &__container {
+      &--title {
+        color: v.$white;
+      }
+    }
+    &__timeline {
+      &--title {
+        color: v.$coral;
+      }
+      &--date {
+        color: v.$white;
+      }
+      &--content {
+        background-color: lighten(v.$dark-blue, 5%);
+      }
+    }
   }
 
-  .skills__container,
-  .project__description-info {
-    background-color: v.$dark-brown;
-  }
-  .skills-items:hover {
-    background-color: v.$light-brown;
-  }
-  .contact.section {
-    background-color: v.$light-black;
-  }
-
-  .project-description {
-    color: v.$black;
+  .back-to {
+    &--text {
+      color: v.$white;
+      i {
+        color: v.$coral;
+      }
+    }
   }
 }
