--- a/src/scss/base/_global.scss
+++ b/src/scss/base/_global.scss
@@ -16,11 +16,11 @@ body {
   font-size: 1.6rem;
   min-height: 100%;
   color: v.$black;
-  background-color: v.$beige;
+  background-color: #fcf6f1;
 }
 .container {
   width: 95%;
-  max-width: 1200px;
+  max-width: 1350px;
   margin: 0 auto;
 }
 .grid {
@@ -49,14 +49,14 @@ ul {
 }
 
 .main {
-  overflow: hidden; //. animation scrollReveal
+  overflow: hidden;
 }
 
 ::-webkit-scrollbar {
-  width: 15px;
+  width: 10px;
 }
 ::-webkit-scrollbar-thumb {
-  background-color: v.$red;
+  background-color: v.$coral;
 }
 ::-webkit-scrollbar-track {
   background-color: v.$beige;
