--- a/src/scss/base/_index.scss
+++ b/src/scss/base/_index.scss
@@ -1,6 +1,5 @@
-@forward "normalize";
+@forward "global";
 @forward "variables";
 @forward "mixins";
-@forward "globales";
-@forward "tipografia";
+@forward "normalize";
 @forward "darkmode";
