--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -1,51 +1,29 @@
-//*Fuentes
-$main-font: "Mukta", sans-serif;
-$title-font: "Oswald", sans-serif;
-$logo-font: "Playfair Display", serif;
-$name-font: "Pacifico", cursive;
+//*fonts
+
+$main-font: "Arapey", serif;
+$title-font: "Purple Purse", serif;
+$text-font: "Neucha", cursive;
+
+//*Colors
+
+$violet: #313444;
+$red: #590d22;
+$coral: #dc7c7b;
+$beige: #fef4ea;
+$white: #ffffff;
+$black: #000000;
+$grey: #f5f5f5;
+$dark-beige: #eecdbb;
+$dark-blue: #232e45;
+$light-beige: #fbf7f3;
+
+//*font-size
+$slim: 300;
+$regular: 400;
+$bold: 700;
+$dark: 900;
 
 //*media Query
 $phone: 480px;
 $tablet: 768px;
 $desktop: 1024px;
-
-//*Colores
-
-$light-brown: #c9b78f;
-$orange: #d3591a;
-$dark-orange: #f07167;
-$pink: rgba(212, 172, 207, 0.927);
-$light-purple: #d1d5db;
-$light-pink: #ddb7bd;
-$beige: #e6e1cd;
-$light-grey: #d6d6d6;
-$grey: rgb(58, 58, 58);
-$white: rgb(255, 255, 255);
-$black: rgb(0, 0, 0);
-$light-black: #242329;
-$royal-blue: #81b29a;
-$purple: rgb(204, 191, 215);
-$dark-purple: #684756;
-$cyan: #8ecae6;
-$light-red: #dbaeae;
-$red: #d48c8c;
-$dark-red: #8a4c4c;
-$green: #899e8b;
-$dark-green: #575f58f6;
-$brown: #a98467;
-$dark-brown: #524d46;
-$blue: #7ea8be;
-$dark-blue: #7ea8be;
-$yellow: #f59e03;
-$dark-yellow: #e3c37f;
-$dark-beige: #fed9b7;
-$light-beige: #e6e1cd;
-//* separacion
-$separacion: 5rem;
-
-//*tamaño fuentes
-
-$slim: 300;
-$regular: 400;
-$bold: 700;
-$dark: 900;
