--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -2,34 +2,48 @@
 @use "base/mixins" as m;
 
 .footer {
-  background-color: v.$black;
-}
+  background-color: v.$violet;
+  &__container {
+    @include m.grid(1, 2rem);
 
-.footer__container {
-  padding-block: 3rem 2rem;
-  row-gap: 2.5rem;
-  text-align: center;
-}
-
-.footer__links {
-  display: flex;
-  justify-content: center;
-  column-gap: 2rem;
-}
-
-.footer__link {
-  color: v.$white;
-  transition: color 0.4s;
-}
-
-.footer__link:hover {
-  color: v.$red;
-}
-
-.footer__copy {
-  color: v.$beige;
-
-  span {
+    &--nav {
+      margin-top: 2rem;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+      gap: 5px;
+    }
+    &--link {
+      font-family: v.$text-font;
+      color: v.$white;
+      &:hover {
+        color: v.$coral;
+      }
+    }
+    &--contact {
+      @include m.tablet {
+        @include m.grid(3, 1rem);
+      }
+    }
+    &--card {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+    &--title,
+    &--text {
+      text-align: center;
+      color: v.$white;
+      margin: 0.5rem;
+    }
+  }
+  &__copy {
     color: v.$white;
+    span {
+      color: v.$coral;
+      font-weight: v.$bold;
+    }
   }
 }
