--- a/src/scss/layout/_projects.scss
+++ b/src/scss/layout/_projects.scss
@@ -1,269 +1,180 @@
 @use "base/variables" as v;
 @use "base/mixins" as m;
 
-.home__container-project {
-  height: 50px;
-  margin: 0 auto;
-  text-align: center;
-}
-.projects.section {
-  margin-top: 5rem;
-}
-.projects__title-wrapper {
-  position: relative;
-  text-align: center;
-  width: 225px;
-  margin: 0 auto;
-}
+.work {
+  background-color: v.$dark-blue;
+  @include m.grid(1, 2rem);
 
-.projects__title-text {
-  position: relative;
-  color: v.$black;
-  font-family: v.$title-font;
-  font-weight: v.$bold;
-  font-size: 2.5rem;
-  z-index: 2;
-}
-
-.projects__title-shape {
-  position: absolute;
-  background-color: v.$green;
-  height: 25px;
-  width: 35px;
-  top: -1rem;
-  right: 5rem;
-  z-index: 1;
-}
-
-.card-project {
-  margin-top: 4rem;
-}
-//, CARDS
-.flip-card {
-  background-color: transparent;
-  width: 300px;
-  height: 350px;
-  perspective: 1000px;
-  font-family: sans-serif;
-  margin: 2rem auto;
-}
-
-.title {
-  font-size: 2rem;
-  font-weight: 900;
-  text-align: center;
-  margin: 0;
-  color: v.$white;
-}
-.project-description {
-  padding: 2.5rem;
-  font-size: 1.5rem;
-  text-align: justify;
-  font-family: v.$main-font;
-  color: v.$black;
-}
-.ri-links-line {
-  font-size: 3rem;
-  font-weight: v.$dark;
-  color: v.$black;
-}
-
-.flip-card-inner {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  text-align: center;
-  transition: transform 0.8s;
-  transform-style: preserve-3d;
-}
-
-.flip-card:hover .flip-card-inner {
-  transform: rotateY(180deg);
-}
-
-.flip-card-front,
-.flip-card-back {
-  box-shadow: 0 8px 14px 0 rgba(0, 0, 0, 0.2);
-  position: absolute;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  width: 100%;
-  height: 100%;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-  border: 1px solid coral;
-  border-radius: 1rem;
-}
-
-.flip-card-front {
-  background-size: cover; /* Ajusta la imagen para cubrir todo el contenedor */
-  background-position: center; /* Centra la imagen en el contenedor */
-  background-repeat: no-repeat;
-}
-
-.item-1 {
-  background-image: image-set(
-    url(../img/tasknexus.avif) 1x,
-    url(../img/tasknexus.webp) 1x,
-    url(../img/tasknexus.jpg) 1x
-  );
-}
-.item-2 {
-  background-image: image-set(
-    url(../img/homehunter.avif) 1x,
-    url(../img/homehunter.webp) 1x,
-    url(../img/homehunter.jpg) 1x
-  );
-}
-.item-3 {
-  background-image: image-set(
-    url(../img/glowradiance.avif) 1x,
-    url(../img/glowradiance.webp) 1x,
-    url(../img/glowradiance.jpg) 1x
-  );
-}
-.item-4 {
-  background-image: image-set(
-    url(../img/harmony-fest.avif) 1x,
-    url(../img/harmony-fest.webp) 1x,
-    url(../img/harmony-fest.jpg) 1x
-  );
-}
-.item-5 {
-  background-image: image-set(
-    url(../img/bizexpo.avif) 1x,
-    url(../img/bizexpo.webp) 1x,
-    url(../img/bizexpo.jpg) 1x
-  );
-}
-.flip-card-back {
-  background: linear-gradient(
-    0deg,
-    rgba(251, 255, 251, 0.9332107843137255) 12%,
-    rgba(235, 231, 216, 1) 30%,
-    rgba(220, 210, 184, 1) 47%,
-    rgba(201, 183, 143, 1) 86%
-  );
-  color: white;
-  transform: rotateY(180deg);
-}
-
-.filter-buttons {
-  margin: 2rem auto;
-  text-align: center;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  width: 300px;
-  height: auto;
-  .button {
-    cursor: pointer;
-    position: relative;
-    padding: 10px 24px;
-    font-size: 1rem;
-    color: v.$dark-red;
-    border: 2px solid v.$dark-red;
-    border-radius: 34px;
-    background-color: transparent;
-    font-weight: 600;
-    transition: all 0.3s cubic-bezier(0.23, 1, 0.32, 1);
-    overflow: hidden;
-    margin: 1rem;
-  }
-
-  .button::before {
-    content: "";
-    position: absolute;
-    inset: 0;
-    margin: auto;
-    width: 50px;
-    height: 50px;
-    border-radius: inherit;
-    scale: 0;
-    z-index: -1;
-    background-color: v.$dark-red;
-    transition: all 0.6s cubic-bezier(0.23, 1, 0.32, 1);
-  }
-
-  .button:hover::before {
-    scale: 3;
-  }
-
-  .button:hover {
+  &__title {
     color: v.$white;
-    scale: 1.1;
-    box-shadow: 0 0px 20px rgba(193, 163, 98, 0.4);
+    text-align: center;
+  }
+  &__controls {
+    margin-bottom: 2rem;
+    &--title {
+      h1 {
+        text-align: center;
+        color: v.$coral;
+        font-size: 25px;
+        font-family: v.$title-font;
+        margin: 0;
+      }
+    }
+    &--buttons {
+      border: solid 2px v.$white;
+    }
+  }
+  &__control {
+    cursor: pointer;
+    background-color: transparent;
+    border: none;
+    font-family: v.$text-font;
+    color: v.$white;
+    font-size: 15px;
+
+    &.blue {
+      color: #8ecae6;
+    }
+    &.orange {
+      color: #f07167;
+    }
+    &.pink {
+      color: #d4acd0;
+    }
+    &.yellow {
+      color: #e3c37f;
+    }
   }
 
-  .button:active {
-    scale: 1;
+  &__project {
+    &--cover {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      align-items: center;
+      height: 100%;
+    }
+    &--img {
+      padding-top: 1rem;
+      width: 220px;
+      height: 150px;
+      margin: 1rem;
+      border-radius: 20px;
+    }
+    &--title {
+      margin: 0;
+      color: v.$dark-blue;
+    }
+    &--techs {
+      @include m.grid(3, 5px);
+    }
+    &--tech {
+      background-color: v.$violet;
+      color: v.$white;
+      margin: 0;
+      padding: 0.1rem 1rem;
+      width: 100%;
+      text-align: center;
+      border-radius: 5rem;
+      font-size: 12px;
+    }
+    &--icon {
+      width: 30px;
+      height: 30px;
+      margin: 1rem;
+      color: v.$dark-blue;
+    }
+  }
+
+  &__projectdesc {
+    &--container {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+    &--title {
+      text-align: center;
+      color: v.$red;
+      margin: 0;
+    }
+    &--text {
+      width: 180px;
+      text-align: center;
+      margin: 0.5rem;
+    }
+    &--link {
+      margin-top: 0.5rem;
+      @include m.button(v.$coral, v.$white);
+    }
   }
 }
-
 .projects__grid {
+  margin-bottom: 3rem;
+  @include m.grid(1, 2rem);
   @include m.tablet {
-    @include m.grid(2, 2);
+    @include m.grid(2, 2rem);
   }
   @include m.desktop {
-    @include m.grid(3, 2);
+    @include m.grid(3, 2rem);
   }
 }
-
-.cta {
+.book {
   position: relative;
-  margin: auto;
-  padding: 12px 18px;
-  transition: all 0.2s ease;
-  border: none;
-  background: none;
-  cursor: pointer;
+  border-radius: 10px;
+  width: 300px;
+  height: 350px;
+  background-color: v.$beige;
+  -webkit-transform: preserve-3d;
+  -ms-transform: preserve-3d;
+  transform: preserve-3d;
+  -webkit-perspective: 2000px;
+  perspective: 2000px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
 }
 
-.cta:before {
-  content: "";
+.cover {
+  top: 0;
   position: absolute;
-  top: 0;
-  left: 0;
-  display: block;
-  border-radius: 50px;
-  background: v.$light-pink;
-  width: 45px;
-  height: 45px;
-  transition: all 0.3s ease;
-}
-
-.cta span {
-  position: relative;
-  font-family: "Ubuntu", sans-serif;
-  font-size: 18px;
-  font-weight: 700;
-  letter-spacing: 0.05em;
-  color: #234567;
-}
-
-.cta svg {
-  position: relative;
-  top: 0;
-  margin-left: 10px;
-  fill: none;
-  stroke-linecap: round;
-  stroke-linejoin: round;
-  stroke: #234567;
-  stroke-width: 2;
-  transform: translateX(-5px);
-  transition: all 0.3s ease;
-}
-
-.cta:hover:before {
+  background-color: v.$beige;
   width: 100%;
-  background: v.$pink;
+  height: 100%;
+  border-radius: 10px;
+  cursor: pointer;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+  -webkit-transform-origin: 0;
+  -ms-transform-origin: 0;
+  transform-origin: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
 }
 
-.cta:hover svg {
-  transform: translateX(0);
+.book:hover .cover {
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+  -webkit-transform: rotatey(-80deg);
+  -ms-transform: rotatey(-80deg);
+  transform: rotatey(-80deg);
 }
+.ri-checkbox-blank-circle-fill {
+  font-size: 10px;
 
-.cta:active {
-  transform: scale(0.95);
+  justify-content: center;
+  align-items: center;
 }
