configured margins of the about section

--- a/src/scss/layout/_about.scss
+++ b/src/scss/layout/_about.scss
@@ -28,7 +28,7 @@
   }
 
   &__grid {
-    margin: 0.5rem auto;
+    margin: 0 auto;
     padding-bottom: 2rem;
     @include m.grid(1, 2rem);
     @include m.tablet {
