--- a/views/audittracker.html
+++ b/views/audittracker.html
@@ -53,6 +53,7 @@
           <h1 class="header__project--title">Audit Tracker</h1>
           <div class="project__video--container">
             <video
+              loading="lazy"
               controls
               src="../public/build/video/audittracker-pre.mp4"
               type="video/mp4"
