--- a/views/dentalclinic.html
+++ b/views/dentalclinic.html
@@ -53,6 +53,7 @@
           <h1 class="header__project--title">Dr.Hector Gonzalez</h1>
           <div class="project__video--container">
             <video
+              loading="lazy"
               controls
               src="../public/build/video/clinicadental-pre.mp4"
               type="video/mp4"
