--- a/views/glowradiance.html
+++ b/views/glowradiance.html
@@ -46,7 +46,7 @@
             <div class="header__project--container">
                 <h1 class="header__project--title">GlowRadiance</h1>
                 <div class="project__video--container">
-                    <video controls src="../public/build/video/glowradiance-pre.mp4" type="video/mp4" class="project__video--play" ></video>
+                    <video loading="lazy" controls src="../public/build/video/glowradiance-pre.mp4" type="video/mp4" class="project__video--play" ></video>
                     <a href="https://youtu.be/fSHLIb9N-2A" class="project__video--button" target="_blank"><i class="ri-play-circle-line"></i> See full video</a>
                     
                 </div>
