--- a/views/portfolio.html
+++ b/views/portfolio.html
@@ -46,7 +46,7 @@
             <div class="header__project--container">
                 <h1 class="header__project--title">My Portfolio</h1>
                 <div class="project__video--container">
-                    <video controls src="../public/build/video/portfolio-pre.mp4" type="video/mp4" class="project__video--play" ></video>
+                    <video loading="lazy" controls src="../public/build/video/portfolio-pre.mp4" type="video/mp4" class="project__video--play" ></video>
                 </div>
             </div>
             
