changed title description and corrected CV

--- a/views/portfolio.html
+++ b/views/portfolio.html
@@ -62,7 +62,7 @@
                             <span class="project__description--text">See Repository</span>
                         </button>
                     </a>
-                    <a href="https://portfolio-stephaniegonzalez.netlify.app/" class="project__description--link" target="_blank">
+                    <a href="https://stephaniegonzalez.netlify.app/" class="project__description--link" target="_blank">
                         <button class="project__description--button">
                             <img
                             class="project__description--svgIcon" src="../public/build/img/go.svg"></img>
