--- a/views/dentalclinic.html
+++ b/views/dentalclinic.html
@@ -68,7 +68,7 @@
               If you wish to gain access to the repository, please contact me directly. This project
               was developed as a freelance work, so the repository is private.
             </p>
-            <a href="../index.html#contact" class="project__description--repo-link">Contáctame</a>
+            <a href="../index.html#contact" class="project__description--repo-link">Contact me</a>
           </div>
           <div class="project__resume">
             <div class="project__resume--content">
