--- a/src/scss/layout/_about.scss
+++ b/src/scss/layout/_about.scss
@@ -10,9 +10,10 @@
       text-align: center;
       color: v.$white;
       margin-top: 0;
-      padding-top: 2rem;
+      padding: 0 2rem;
       @include m.tablet {
         text-align: left;
+        padding: 0;
       }
     }
     &--text {
@@ -20,9 +21,10 @@
       font-size: 2rem;
       color: v.$white;
       text-align: center;
-      padding-right: 2rem;
+      padding: 0 2rem;
       @include m.tablet {
         text-align: left;
+        padding: 0 2rem 0 0;
       }
     }
   }
@@ -55,12 +57,13 @@
       color: v.$white;
       font-family: v.$text-font;
       font-size: 2rem;
-      padding-right: 2rem;
+      padding: 0 2rem;
       span {
         color: v.$coral;
       }
       @include m.tablet {
         text-align: left;
+        padding: 0 2rem 0 1rem;
       }
     }
     &--button {
